--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link href="styles/style.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet">
     </head>
 
     <body>
@@ -12,8 +14,8 @@
                 </div>
                 <div class="search-box">
                     <form>
-                        <input type="text" class="search-input">
-                        <button></button>
+                        <input type="text" >
+                        <button type="submit"><img src="images/search-icon.png" ></button>
                     </form>
                 </div>
                 <div class="nav-icons">
@@ -24,12 +26,266 @@
                 </div>
             </div>
         </header>
-        <nav></nav>
-        <section id="main"></section>
-        <footer></footer>
+        <nav>
+            <div class="main-container">
+                <ul>
+                    <div class="left-navbar">
+                        <li class="current">All</li>
+                        <li>Images</li>
+                        <li>News</li>
+                        <li>Videos</li>
+                        <li>Books</li>
+                        <li>More</li>
+                    </div>
+                    <div class="right-navbar">
+                        <li>Settings</li>
+                        <li>Tools</li>
+                    </div>
+                </ul>
+            </div>
+        </nav>
+        <main>
+            <section class="main-container">
+
+                <p class="results-stats">About 274,000,000 results (0.39 seconds) </p>
+
+                <div class="webpage-box">
+                    <a href="https://github.com/" class="web-description">The world's leading software development platform · GitHub </a>
+                    <a href="https://github.com/" class="web-link">https://github.com/</a>
+                    <p class="web-content"><span class="keyword">GitHub</span> brings together the world's largest community of developers 
+                        to discover, share, and build better software. From open source projects to private 
+                        team ...</p>
+                    <form class="web-search-bar">
+                        <input type="text" placeholder="Results from github.com">
+                        <button type="submit"><img src="images/search-icon.png" ></button>
+                    </form>
+                    <div class="web-url-container">
+                        <div class="web-url-box">
+                            <a href="#" class="web-description">Github</a>
+                            <p class="web-content">GitHub has 30 repositories available. Follow their code on ...</p>
+                        </div>
+                        <div class="web-url-box">
+                                <a href="#" class="web-description">Explore · GitHub</a>
+                                <p class="web-content">Explore is your guide to finding your next project, catching up ...</p>
+                        </div>
+                        <div class="web-url-box">
+                                <a href="#" class="web-description">Join GitHub</a>
+                                <p class="web-content">Join GitHub. The best way to design, build, and ship software ...</p>
+                        </div>
+                        <div class="web-url-box">
+                                <a href="#" class="web-description">GitHub Desktop</a>
+                                <p class="web-content">Extend your GitHub workflow beyond your browser with ...</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ask-box">
+                    <p class="also-ask">People also ask</p>
+                    <p class="question">Whats is GitHub?<button>search</button></p>
+                    <p class="question">Is GitHub still open source?<button>search</button></p>
+                    <p class="question">What is GitHub and how it works?<button>search</button></p>
+                    <p class="question">Is GitHub free?<button>search</button></p>
+                </div>
+                <a href="#"class="feedback-link">Feedback</a>
+
+                <div class="webpage-box">
+                    <a href="https://twitter.com/github" class="web-description">GitHub (@github) · Twitter</a>
+                    <p class="web-link">https://twitter.com/github<img src="images/twitter-icon.png"></p>
+                </div> 
+                
+                <div class="twitts-container">
+                    <div class="twitt-box">
+                        <p class="twitt-content">
+                            Code review can be a lot. Atom 1.37 Beta is making it easier. Comments and reviews 
+                            can be viewed together in one place next to your code, along with a progress bar. Let’s get 
+                            rid of that code review anxiety 💖 <span class="link">github.co/2Iyq6rV</span> 
+                            <span class="link">pic.twitter.com/VR03G9K…</span></p>
+                        <p class="twitt-upload-time">2 hours ago</p>
+                    </div>
+                    <div class="twitt-box">
+                        <p class="twitt-content">Need a reason to attend #GitHubSatellite? We’ve got five! 1. Meet the 
+                            people behind the code 2. Hear the latest on GitHub products and services 3. Find your next 
+                            project 4. Take home swag 5. Build with the best Which one are you coming 
+                            for? <span class="link">github.co/2VMVxCC</span> 
+                            <span class="link">pic.twitter.com/K3V1reN…</span></p>
+                        <p class="twitt-upload-time">3 hours ago</p>
+                    </div>
+                    <div class="twitt-box">
+                        <p class="twitt-content">Want to learn how to automate so you have more time to innovate? 
+                            @wilhelmklopp will show you how to turn ideas into features with GitHub Apps at Workshop 
+                            Day in Berlin. Save your spot. <span class="link">github.co/2IvoYFw</span> 
+                            <span class="link">pic.twitter.com/iwfwfFP…</span></p>
+                        <p class="twitt-upload-time">3 days ago</p>
+                    </div>
+                </div>
+                <p class="view-on-twitter"><button>></button><span>View on Twitter<span></p>
+
+                <div class="webpage-box">
+                    <a href="#" class="web-description">GitHub - Wikipedia</a>
+                    <a href="#" class="web-link">https://en.wikipedia.org/wiki/GitHub</a>
+                    <p class="web-content"><span class="keyword">GitHub</span> is a web-based hosting service for 
+                        version control using Git. It is mostly used for computer code. It offers all of the 
+                        distributed version control and source ...</p>
+                </div>
+
+                <div class="webpage-box">
+                    <a href="#" class="web-description">The GitHub Blog - Updates, ideas, and inspiration from GitHub to help ...</a>
+                    <a href="#" class="web-link">https://github.blog/</a>
+                    <p class="web-content">Updates, ideas, and inspiration from <span class="keyword">GitHub</span> to help 
+                        developers build and design software.</p>
+                </div>
+
+                <div class="webpage-box">
+                    <a href="#" class="web-description">New year, new GitHub: Announcing unlimited free private repos and ...</a>
+                    <a href="#" class="web-link">https://github.blog/2019-01-07-new-year-new-github/</a>
+                    <p class="web-content">Jan 7, 2019 - Today we're announcing two major updates to 
+                        make <span class="keyword">GitHub</span> more accessible to developers: unlimited free private 
+                        repositories, and a simpler, ...</p>  
+                </div>
+
+                <div class="webpage-box">
+                    <a href="#" class="web-description">GitHub Community Forum: Home</a>
+                    <a href="#" class="web-link">https://github.community/</a>
+                    <p class="web-content">Learn more about the <span class="keyword">GitHub</span> Community Forum and 
+                        discover resources to help you ... Discussion and support using the <span class="keyword">GitHub</span> 
+                        API, building <span class="keyword">GitHub</span> Apps, and ...</p>
+                </div>
+
+                <div class="webpage-box">
+                    <a href="#" class="web-description">GitHub Status</a>
+                    <a href="#" class="web-link">https://www.githubstatus.com/</a>
+                    <p class="web-content">Welcome to <span class="keyword">GitHub's</span> home for real-time and 
+                        historical data on system performance.</p>
+                </div>
+
+                <div class="searches-related-box">
+                    <p>Searches related to github</p>
+
+                    <table>
+                        <tr>
+                            <td>github <b>projects</b></td>
+                            <td>github <b>microsoft</b></td>
+                        </tr>
+                        <tr>
+                            <td>github <b>login</b></td>
+                            <td>github <b>pricing</b></td>
+                        </tr>
+                        <tr>
+                            <td>github <b>repository</b></td>
+                            <td>github <b>wiki</b></td>
+                        </tr>
+                        <tr>
+                            <td>github <b>tutorial</b></td>
+                            <td>github <b>pages</b></td>
+                        </tr>
+                    </table>
+                </div>
+
+                <div class="page-nav">
+                    <table>
+                        <tr>
+                            <td><div class="letter-G-blue" ></div><span class="page"></span></td>
+                            <td class="current-page"><div class="letter-o-red" ></div><span class="page-number">1</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">2</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">3</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">4</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">5</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">6</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">7</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">8</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">9</span></td>
+                            <td class="page"><div class="letter-o-yellow" ></div><span class="page-number">10</span></td>
+                            <td class="page"><div class="word-gle" ><div class="arrow-icon"></div></div><span class="page-next">Next</span></td>
+                        </tr>
+                    </table>
+                </div>
+            </section>
+
+            <aside>
+                <div class="wikipedia-article">
+                    <div class="wikipedia-heading">
+                        <div class="container">
+                            <h2>GitHub Inc.<i class="material-icons">share</i></h2>
+                            <p>Company</p>
+                        </div>
+                        <img src="images/github-icon.png">
+                    </div>
+                    <div class="wikipedia-link">
+                        <a href="#"><div class="planet-icon"></div>github.com</a>
+                    </div>
+                    <div class="wikipedia-content">
+                        <p class="web-content">GitHub is a web-based hosting service for version control using Git. It is mostly used for 
+                            computer code. It offers all of the distributed version control and source code management functionality of 
+                            Git as well as adding its own features. <span class="link">Wikipedia</span></p>
+                        <p class="information"><b>Founded:</b> 2008</p>
+                        <p class="information"><b>Headquarters:</b> <span class=link>San Francisco, California, United States</span></p>
+                        <p class="information"><b>CEO:</b> <span class="link">Nat Friedman</span> (Oct 29, 2018–)</p>
+                        <p class="information"><b>Parent organization:</b> <span class="link">Microsoft Corporation</span></p>
+                        <p class="information"><b>Founders:</b> <span class="link">Tom Preston-Werner</span>, 
+                            <span class="link">Chris Wanstrath</span>, <span class="link">Scott Chacon</span>, <span class="link">P. J. Hyett</span></p>
+                        <p class="information"><b>Subsidiary:</b> <span class="link">Easel Inc.</span></p>
+
+                        <p class="people-also">People also search</p>
+                        <p class="view-more">View 10+ more</p>
+
+                        <div class="other-websites-container"> 
+                            <div class="another-website-box">
+                                <img src="images/linkedIn-icon.png">
+                                <p class="link">LinkedIn</p>
+                            </div>
+                            <div class="another-website-box">
+                                    <img src="images/stack-overflow-icon.png">
+                                    <p class="link">Stack Overflow</p>
+                            </div>
+                            <div class="another-website-box">
+                                    <img src="images/heroku-icon.png">
+                                    <p class="link">Heroku</p>
+                            </div>
+                            <div class="another-website-box">
+                                    <img src="images/outlook-icon.png">
+                                    <p class="link">Outlook</p>
+                            </div>
+                            <div class="another-website-box">
+                                    <img src="images/udemy-icon.jpg">
+                                    <p class="link">Udemy, Inc.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <p class="disclaimer">Disclaimer</p>
+                <p class="feedback">Feedback</p>
+
+                <div class="knowledge-panel">
+                    <p><img src="images/verified-icon.png">Claim this knowledge panel</p>
+                </div>
+            </aside>
+        </main>
+            
+        <footer>
+            <div class="row">
+                <div class="main-container">
+                    <p class="country">Venezuela</p>
+                    <p class="location"><i class="material-icons">lens</i><b>Narnia, Unknown</b> - From your Internet address - Use precise location - Learn more</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="main-container">
+                    <ul>
+                        <li>Help</li>
+                        <li>Send feedback</li>
+                        <li>Privacy</li>
+                        <li>Terms</li>
+                     </ul>
+                </div>
+            </div>
 
 
 
+
+
+        </footer>
 
 
 
