--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </div>
                 <div class="nav-icons">
                     <ul>
-                        <a href="#" target="blank"><li>icon1</li></a>
-                        <a href="#" target="blank"><li>icon2</li></a>
+                        <a href="#" target="blank"><li><i class="material-icons">apps</i></li></a>
+                        <a href="#" target="blank"><li><i class="material-icons">account_circle</i></li></a>
                     </ul>
                 </div>
             </div>
@@ -51,7 +51,7 @@
 
                 <div class="webpage-box">
                     <a href="https://github.com/" class="web-description">The world's leading software development platform · GitHub </a>
-                    <a href="https://github.com/" class="web-link">https://github.com/</a>
+                    <a href="https://github.com/" class="web-link">https://github.com/<i class="material-icons">arrow_drop_down</i></a>
                     <p class="web-content"><span class="keyword">GitHub</span> brings together the world's largest community of developers 
                         to discover, share, and build better software. From open source projects to private 
                         team ...</p>
@@ -81,10 +81,10 @@
 
                 <div class="ask-box">
                     <p class="also-ask">People also ask</p>
-                    <p class="question">Whats is GitHub?<button>search</button></p>
-                    <p class="question">Is GitHub still open source?<button>search</button></p>
-                    <p class="question">What is GitHub and how it works?<button>search</button></p>
-                    <p class="question">Is GitHub free?<button>search</button></p>
+                    <p class="question">Whats is GitHub?<i class="material-icons">keyboard_arrow_down</i></p>
+                    <p class="question">Is GitHub still open source?<i class="material-icons">keyboard_arrow_down</i></p>
+                    <p class="question">What is GitHub and how it works?<i class="material-icons">keyboard_arrow_down</i></p>
+                    <p class="question">Is GitHub free?<i class="material-icons">keyboard_arrow_down</i></p>
                 </div>
                 <a href="#"class="feedback-link">Feedback</a>
 
@@ -118,11 +118,11 @@
                         <p class="twitt-upload-time">3 days ago</p>
                     </div>
                 </div>
-                <p class="view-on-twitter"><button>></button><span>View on Twitter<span></p>
+                <p class="view-on-twitter"><i class="material-icons">arrow_forward</i><span>View on Twitter<span></p>
 
                 <div class="webpage-box">
                     <a href="#" class="web-description">GitHub - Wikipedia</a>
-                    <a href="#" class="web-link">https://en.wikipedia.org/wiki/GitHub</a>
+                    <a href="#" class="web-link">https://en.wikipedia.org/wiki/GitHub<i class="material-icons">arrow_drop_down</i></a>
                     <p class="web-content"><span class="keyword">GitHub</span> is a web-based hosting service for 
                         version control using Git. It is mostly used for computer code. It offers all of the 
                         distributed version control and source ...</p>
@@ -130,14 +130,14 @@
 
                 <div class="webpage-box">
                     <a href="#" class="web-description">The GitHub Blog - Updates, ideas, and inspiration from GitHub to help ...</a>
-                    <a href="#" class="web-link">https://github.blog/</a>
+                    <a href="#" class="web-link">https://github.blog/<i class="material-icons">arrow_drop_down</i></a>
                     <p class="web-content">Updates, ideas, and inspiration from <span class="keyword">GitHub</span> to help 
                         developers build and design software.</p>
                 </div>
 
                 <div class="webpage-box">
                     <a href="#" class="web-description">New year, new GitHub: Announcing unlimited free private repos and ...</a>
-                    <a href="#" class="web-link">https://github.blog/2019-01-07-new-year-new-github/</a>
+                    <a href="#" class="web-link">https://github.blog/2019-01-07-new-year-new-github/<i class="material-icons">arrow_drop_down</i></a>
                     <p class="web-content">Jan 7, 2019 - Today we're announcing two major updates to 
                         make <span class="keyword">GitHub</span> more accessible to developers: unlimited free private 
                         repositories, and a simpler, ...</p>  
@@ -145,7 +145,7 @@
 
                 <div class="webpage-box">
                     <a href="#" class="web-description">GitHub Community Forum: Home</a>
-                    <a href="#" class="web-link">https://github.community/</a>
+                    <a href="#" class="web-link">https://github.community/<i class="material-icons">arrow_drop_down</i></a>
                     <p class="web-content">Learn more about the <span class="keyword">GitHub</span> Community Forum and 
                         discover resources to help you ... Discussion and support using the <span class="keyword">GitHub</span> 
                         API, building <span class="keyword">GitHub</span> Apps, and ...</p>
@@ -153,7 +153,7 @@
 
                 <div class="webpage-box">
                     <a href="#" class="web-description">GitHub Status</a>
-                    <a href="#" class="web-link">https://www.githubstatus.com/</a>
+                    <a href="#" class="web-link">https://www.githubstatus.com/<i class="material-icons">arrow_drop_down</i></a>
                     <p class="web-content">Welcome to <span class="keyword">GitHub's</span> home for real-time and 
                         historical data on system performance.</p>
                 </div>
@@ -217,13 +217,15 @@
                         <p class="web-content">GitHub is a web-based hosting service for version control using Git. It is mostly used for 
                             computer code. It offers all of the distributed version control and source code management functionality of 
                             Git as well as adding its own features. <span class="link">Wikipedia</span></p>
-                        <p class="information"><b>Founded:</b> 2008</p>
-                        <p class="information"><b>Headquarters:</b> <span class=link>San Francisco, California, United States</span></p>
-                        <p class="information"><b>CEO:</b> <span class="link">Nat Friedman</span> (Oct 29, 2018–)</p>
-                        <p class="information"><b>Parent organization:</b> <span class="link">Microsoft Corporation</span></p>
-                        <p class="information"><b>Founders:</b> <span class="link">Tom Preston-Werner</span>, 
+                        <div class="information-container">
+                            <p class="information"><b>Founded:</b> 2008</p>
+                            <p class="information"><b>Headquarters:</b> <span class=link>San Francisco, California, United States</span></p>
+                            <p class="information"><b>CEO:</b> <span class="link">Nat Friedman</span> (Oct 29, 2018–)</p>
+                            <p class="information"><b>Parent organization:</b> <span class="link">Microsoft Corporation</span></p>
+                            <p class="information"><b>Founders:</b> <span class="link">Tom Preston-Werner</span>, 
                             <span class="link">Chris Wanstrath</span>, <span class="link">Scott Chacon</span>, <span class="link">P. J. Hyett</span></p>
-                        <p class="information"><b>Subsidiary:</b> <span class="link">Easel Inc.</span></p>
+                            <p class="information"><b>Subsidiary:</b> <span class="link">Easel Inc.</span></p>
+                        </div>
 
                         <p class="people-also">People also search</p>
                         <p class="view-more">View 10+ more</p>
@@ -280,16 +282,6 @@
                      </ul>
                 </div>
             </div>
-
-
-
-
-
         </footer>
-
-
-
-
-
     </body>
 </html>
